# multimcts

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
examples/: README.md  play_tictactoe.py  simulate_tictactoe.py  tictactoe.py
multimcts/: __init__.py  mcts.pyx
tests/: tictactoe.py
